Restart, left/right click implemented.

--- a/assets/templates/view-tournament.html.tmpl
+++ b/assets/templates/view-tournament.html.tmpl
@@ -154,6 +154,10 @@
               <td class="clock-help-dialog-table-key"><b>↓</b></td>
               <td class="clock-help-dialog-table-desc">*Subtract 1 Minute †</td>
             </tr>
+            <tr>
+              <td class="clock-help-dialog-table-key"><b>R</b></td>
+              <td class="clock-help-dialog-table-desc">Restart level ‡</td>
+            </tr>
             <tr> <td colspan="2"> <hr> </td> </tr>
             <tr>
               <td class="clock-help-dialog-table-key"><b>E</b></td>
@@ -168,6 +172,7 @@
         <div class="clock-help-dialog-close">
           † Shift+key will step by 10 </br>
           * Lock/unlock with BS key. <br>
+          ‡ Shift+R will restart the tournament <br>
           <b>F1</b> or <b>?</b> shows help. <br>
           <b>Esc</b> to close this help.
         </div>
